--- a/StoreStock/StoreStockWeb.Services.csproj
+++ b/StoreStock/StoreStockWeb.Services.csproj
@@ -6,11 +6,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7FE2485C-DD57-4516-BA89-78B8EED6DD1A}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>StoreStock</RootNamespace>
-    <AssemblyName>StoreStock</AssemblyName>
+    <RootNamespace>StoreStockWeb.Services</RootNamespace>
+    <AssemblyName>StoreStockWeb.Services</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigInfo.cs" />
+    <Compile Include="StoreStockModule.cs" />
+    <Compile Include="ConfigModule.cs" />
     <Compile Include="Core\BusinessLogic\AddingStock\SavingProcess.cs" />
     <Compile Include="Core\BusinessLogic\AddingStock\StringInputParser.cs" />
     <Compile Include="Core\BusinessLogic\CLI\CLI Manager.cs" />
@@ -73,6 +77,7 @@
     <Compile Include="Core\Models\Werehouse.cs" />
     <Compile Include="Core\Program.cs" />
     <Compile Include="CustomBootstrapper.cs" />
+    <Compile Include="MainModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\Modules.cs" />
@@ -84,7 +89,14 @@
   <ItemGroup>
     <Content Include="index.html" />
     <Content Include="Modules\index.html" />
-    <Content Include="Views\index.html" />
+    <EmbeddedResource Include="Views\StockViewer.html" />
+    <EmbeddedResource Include="Views\content\logo.svg" />
+    <Content Include="Views\content\tailwind.min.css" />
+    <EmbeddedResource Include="Views\config\index.html" />
+    <EmbeddedResource Include="Views\content\layout.css" />
+    <EmbeddedResource Include="Views\content\style.css" />
+    <EmbeddedResource Include="Views\index.html" />
+    <EmbeddedResource Include="Views\MasterPage.html" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Core\SingletonPattern\" />
