--- a/StoreStock/packages.config
+++ b/StoreStock/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Nancy" version="1.4.4" targetFramework="net48" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net48" />
+  <package id="TinyIoC" version="1.3" targetFramework="net48" developmentDependency="true" />
 </packages>
