--- a/StoreStock/StoreStockWeb.Services.csproj
+++ b/StoreStock/StoreStockWeb.Services.csproj
@@ -90,7 +90,7 @@
     <Content Include="index.html" />
     <Content Include="Modules\index.html" />
     <EmbeddedResource Include="Views\LandingPage.html" />
-    <EmbeddedResource Include="Views\StockViewerTable.html" />
+    <EmbeddedResource Include="Views\StockViewerIndex.html" />
     <EmbeddedResource Include="Views\StockViewer.html" />
     <EmbeddedResource Include="Views\content\logo.svg" />
     <Content Include="Views\content\tailwind.min.css" />
