--- a/StoreStock/StoreStockWeb.Services.csproj
+++ b/StoreStock/StoreStockWeb.Services.csproj
@@ -78,44 +78,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigInfo.cs" />
+    <Compile Include="Core\DummyData\StringInputParser.cs" />
+    <Compile Include="Services\ConfigInfo.cs" />
+    <Compile Include="Services\ConfigModule.cs" />
     <Compile Include="Core\Models\Factory\Factory.cs" />
     <Compile Include="Core\Models\Factory\IFactory.cs" />
     <Compile Include="Core\Models\ObjectInterface\IStock.cs" />
     <Compile Include="Core\Models\ObjectInterface\IStore.cs" />
-    <Compile Include="HTTPResponse.cs" />
-    <Compile Include="SerializableStock.cs" />
-    <Compile Include="StoreStockModule.cs" />
-    <Compile Include="ConfigModule.cs" />
-    <Compile Include="Core\BusinessLogic\AddingStock\SavingProcess.cs" />
-    <Compile Include="Core\BusinessLogic\AddingStock\StringInputParser.cs" />
-    <Compile Include="Core\BusinessLogic\CLI\CLI Manager.cs" />
-    <Compile Include="Core\BusinessLogic\CLI\CLI menu.cs" />
-    <Compile Include="Core\BusinessLogic\CLI\CLI to Function.cs" />
-    <Compile Include="Core\BusinessLogic\CLI\InterfaceAdd.cs" />
-    <Compile Include="Core\BusinessLogic\CLI\InterfaceDelete.cs" />
-    <Compile Include="Core\BusinessLogic\CLI\InterfaceSell.cs" />
-    <Compile Include="Core\BusinessLogic\CLI\InterfaceView.cs" />
-    <Compile Include="Core\BusinessLogic\Processing\ObjectConverter.cs" />
-    <Compile Include="Core\BusinessLogic\ViewingStock\ViewAllStock.cs" />
-    <Compile Include="Core\BusinessLogic\ViewingStock\ViewFilteredStock.cs" />
-    <Compile Include="Core\BusinessLogic\ViewingStock\JSONParser.cs" />
-    <Compile Include="Core\BusinessLogic\ViewingStock\ViewStock.cs" />
+    <Compile Include="Core\Run.cs" />
+    <Compile Include="Services\HTTPResponse.cs" />
+    <Compile Include="Services\ModelStock.cs" />
+    <Compile Include="Services\ModelStoreStock.cs" />
+    <Compile Include="Services\SerializableStock.cs" />
+    <Compile Include="Services\StoreStockModule.cs" />
     <Compile Include="Core\DummyData\GenerateDummyData.cs" />
     <Compile Include="Core\Models\Object\Book.cs" />
     <Compile Include="Core\Models\Object\Pen.cs" />
     <Compile Include="Core\Models\Object\Pencil.cs" />
-    <Compile Include="Core\Models\RepositoryManager\IRepository.cs" />
-    <Compile Include="Core\Models\RepositoryManager\Repository.cs" />
+    <Compile Include="Core\BusinessLogic\RepositoryManager\IRepository.cs" />
+    <Compile Include="Core\BusinessLogic\RepositoryManager\Repository.cs" />
     <Compile Include="Core\Models\ObjectInterface\Stock.cs" />
     <Compile Include="Core\Models\ObjectInterface\Store.cs" />
-    <Compile Include="Core\Program.cs" />
-    <Compile Include="CustomBootstrapper.cs" />
-    <Compile Include="MainModule.cs" />
+    <Compile Include="Services\CustomBootstrapper.cs" />
+    <Compile Include="Services\MainModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Modules\Modules.cs" />
-    <Compile Include="SerializableStoreStock.cs" />
+    <Compile Include="Services\SerializableStoreStock.cs" />
     <Compile Include="TinyIoC.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -123,12 +111,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="index.html" />
-    <Content Include="Modules\index.html" />
     <EmbeddedResource Include="Views\LandingPage.html" />
     <EmbeddedResource Include="Views\StockViewerIndex.html" />
     <EmbeddedResource Include="Views\StockViewer.html" />
     <EmbeddedResource Include="Views\content\logo.svg" />
+    <Content Include=".gitignore" />
     <Content Include="Views\content\tailwind.min.css" />
     <EmbeddedResource Include="Views\config\index.html" />
     <EmbeddedResource Include="Views\content\layout.css" />
