--- a/StoreStock/StoreStockWeb.Services.csproj
+++ b/StoreStock/StoreStockWeb.Services.csproj
@@ -121,11 +121,10 @@
     <Compile Include="Core\DummyData\StringInputParser.cs" />
     <Compile Include="Core\Models\Factory\Factory.cs" />
     <Compile Include="Core\Models\Factory\IFactory.cs" />
-    <Compile Include="Core\Models\ObjectInterface\IStore.cs" />
     <Compile Include="Core\Models\Object\Stock.cs" />
     <Compile Include="Core\Run.cs" />
-    <Compile Include="Services\Action\StockAPI.cs" />
-    <Compile Include="Services\Action\StoreAPI.cs" />
+    <Compile Include="Services\APILogic\StockAPI.cs" />
+    <Compile Include="Services\APILogic\StoreAPI.cs" />
     <Compile Include="Services\Module\StockModule.cs" />
     <Compile Include="Services\Model\ModelStock.cs" />
     <Compile Include="Services\Model\ModelStoreStock.cs" />
@@ -137,7 +136,7 @@
     <Compile Include="Core\Models\Object\Pencil.cs" />
     <Compile Include="Core\BusinessLogic\RepositoryManager\IStockRepository.cs" />
     <Compile Include="Core\BusinessLogic\RepositoryManager\StockRepository.cs" />
-    <Compile Include="Core\Models\ObjectInterface\Store.cs" />
+    <Compile Include="Core\Models\Object\Store.cs" />
     <Compile Include="Services\Bootstrapper\Bootstrapper.cs" />
     <Compile Include="Services\Module\MainModule.cs" />
     <Compile Include="Program.cs" />
