--- a/StoreStock/StoreStockWeb.Services.csproj
+++ b/StoreStock/StoreStockWeb.Services.csproj
@@ -116,9 +116,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\BusinessLogic\RepositoryManager\IStockRepository.cs" />
     <Compile Include="Core\BusinessLogic\RepositoryManager\IStoreRepository.cs" />
-    <Compile Include="Core\BusinessLogic\RepositoryManager\StoreRepository.cs" />
-    <Compile Include="Core\BusinessLogic\Stock State\SStockRepository.cs" />
+    <Compile Include="Core\BusinessLogic\StockStateRepository\SStockRepository.cs" />
+    <Compile Include="Core\BusinessLogic\StoreStateRepository\InitStoreState.cs" />
+    <Compile Include="Core\BusinessLogic\StoreStateRepository\IStoreState.cs" />
+    <Compile Include="Core\BusinessLogic\StoreStateRepository\RunningStoreState.cs" />
+    <Compile Include="Core\BusinessLogic\StoreStateRepository\ShuttingDownStoreState.cs" />
+    <Compile Include="Core\BusinessLogic\StoreStateRepository\SStoreRepository.cs" />
     <Compile Include="Core\DummyData\StringInputParser.cs" />
     <Compile Include="Core\Models\Factory\Factory.cs" />
     <Compile Include="Core\Models\Factory\IFactory.cs" />
@@ -132,18 +137,16 @@
     <Compile Include="Core\Models\Object\Book.cs" />
     <Compile Include="Core\Models\Object\Pen.cs" />
     <Compile Include="Core\Models\Object\Pencil.cs" />
-    <Compile Include="Core\BusinessLogic\RepositoryManager\IStockRepository.cs" />
-    <Compile Include="Core\BusinessLogic\RepositoryManager\StockRepository.cs" />
     <Compile Include="Core\Models\Object\Store.cs" />
     <Compile Include="Services\Bootstrapper\Bootstrapper.cs" />
     <Compile Include="Services\Module\MainModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\BusinessLogic\Stock State\RunningState.cs" />
-    <Compile Include="Core\BusinessLogic\Stock State\InitState.cs" />
-    <Compile Include="Core\BusinessLogic\Stock State\IState.cs" />
-    <Compile Include="Core\BusinessLogic\Stock State\ShuttingDownState.cs" />
-    <Compile Include="StateControl.cs" />
+    <Compile Include="Core\BusinessLogic\StockStateRepository\RunningState.cs" />
+    <Compile Include="Core\BusinessLogic\StockStateRepository\InitState.cs" />
+    <Compile Include="Core\BusinessLogic\StockStateRepository\IState.cs" />
+    <Compile Include="Core\BusinessLogic\StockStateRepository\ShuttingDownState.cs" />
+    <Compile Include="Core\BusinessLogic\StateControl.cs" />
     <Compile Include="TinyIoC.cs" />
   </ItemGroup>
   <ItemGroup>
