--- a/StoreStock/StoreStockWeb.Services.csproj
+++ b/StoreStock/StoreStockWeb.Services.csproj
@@ -116,13 +116,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\BusinessLogic\RepositoryManager\IStockRepository.cs" />
-    <Compile Include="Core\BusinessLogic\RepositoryManager\IStoreRepository.cs" />
+    <Compile Include="Core\BusinessLogic\InterfaceRepository\IStockRepository.cs" />
+    <Compile Include="Core\BusinessLogic\InterfaceRepository\IStoreRepository.cs" />
     <Compile Include="Core\BusinessLogic\StockStateRepository\StockRepository.cs" />
-    <Compile Include="Core\BusinessLogic\StoreStateRepository\InitStoreState.cs" />
+    <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepository_Init.cs" />
     <Compile Include="Core\BusinessLogic\StoreStateRepository\IStoreState.cs" />
-    <Compile Include="Core\BusinessLogic\StoreStateRepository\RunningStoreState.cs" />
-    <Compile Include="Core\BusinessLogic\StoreStateRepository\ShuttingDownStoreState.cs" />
+    <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepository_Run.cs" />
+    <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepository_Stop.cs" />
     <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepository.cs" />
     <Compile Include="Core\DummyData\StringInputParser.cs" />
     <Compile Include="Core\Models\Factory\Factory.cs" />
@@ -142,10 +142,10 @@
     <Compile Include="Services\Module\MainModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\BusinessLogic\StockStateRepository\RunningState.cs" />
-    <Compile Include="Core\BusinessLogic\StockStateRepository\InitState.cs" />
+    <Compile Include="Core\BusinessLogic\StockStateRepository\StockRepository_Run.cs" />
+    <Compile Include="Core\BusinessLogic\StockStateRepository\StockRepository_Init.cs" />
     <Compile Include="Core\BusinessLogic\StockStateRepository\IState.cs" />
-    <Compile Include="Core\BusinessLogic\StockStateRepository\ShuttingDownState.cs" />
+    <Compile Include="Core\BusinessLogic\StockStateRepository\StockRepository_Stop.cs" />
     <Compile Include="Core\BusinessLogic\StateControl.cs" />
     <Compile Include="TinyIoC.cs" />
   </ItemGroup>
