--- a/StoreStock/StoreStockWeb.Services.csproj
+++ b/StoreStock/StoreStockWeb.Services.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepository_Run.cs" />
     <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepository_Stop.cs" />
     <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepository.cs" />
+    <Compile Include="Core\DummyData\GenerateCondition.cs" />
     <Compile Include="Core\DummyData\StringInputParser.cs" />
     <Compile Include="Core\Models\Factory\Factory.cs" />
     <Compile Include="Core\Models\Factory\IFactory.cs" />
@@ -144,9 +145,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\BusinessLogic\StockStateRepository\StockRepository_Run.cs" />
     <Compile Include="Core\BusinessLogic\StockStateRepository\StockRepository_Init.cs" />
-    <Compile Include="Core\BusinessLogic\StockStateRepository\IState.cs" />
+    <Compile Include="Core\BusinessLogic\StockStateRepository\IStockState.cs" />
     <Compile Include="Core\BusinessLogic\StockStateRepository\StockRepository_Stop.cs" />
     <Compile Include="Core\BusinessLogic\StateControl.cs" />
+    <Compile Include="Services\RequestModel\RequestStockAmount.cs" />
+    <Compile Include="Services\RequestModel\RequestStore.cs" />
+    <Compile Include="Services\RequestModel\RequestStock.cs" />
     <Compile Include="TinyIoC.cs" />
   </ItemGroup>
   <ItemGroup>
