--- a/StoreStock/StoreStockWeb.Services.csproj
+++ b/StoreStock/StoreStockWeb.Services.csproj
@@ -118,12 +118,12 @@
   <ItemGroup>
     <Compile Include="Core\BusinessLogic\InterfaceRepository\IStockRepository.cs" />
     <Compile Include="Core\BusinessLogic\InterfaceRepository\IStoreRepository.cs" />
-    <Compile Include="Core\BusinessLogic\StockStateRepository\StockRepository.cs" />
+    <Compile Include="Core\BusinessLogic\InterfaceRepository\StockRepository.cs" />
     <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepositoryInitState.cs" />
     <Compile Include="Core\BusinessLogic\StoreStateRepository\IStoreState.cs" />
     <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepositoryRun.cs" />
     <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepositoryStop.cs" />
-    <Compile Include="Core\BusinessLogic\StoreStateRepository\StoreRepository.cs" />
+    <Compile Include="Core\BusinessLogic\InterfaceRepository\StoreRepository.cs" />
     <Compile Include="Core\DummyData\GenerateCondition.cs" />
     <Compile Include="Core\DummyData\StringInputParser.cs" />
     <Compile Include="Core\Models\Factory\Factory.cs" />
