--- a/StoreStock/StoreStockWeb.Services.csproj
+++ b/StoreStock/StoreStockWeb.Services.csproj
@@ -135,7 +135,9 @@
     <Compile Include="Services\APILogic\Stock\ReadStockByID.cs" />
     <Compile Include="Services\APILogic\Stock\StockAPI.cs" />
     <Compile Include="Services\APILogic\Stock\UpdateStockAmount.cs" />
+    <Compile Include="Services\APILogic\Store\ReadStore.cs" />
     <Compile Include="Services\APILogic\Store\StoreAPI.cs" />
+    <Compile Include="Services\APILogic\Store\UpdateStore.cs" />
     <Compile Include="Services\Module\StockModule.cs" />
     <Compile Include="Services\Module\StoreModule.cs" />
     <Compile Include="Core\DummyData\GenerateDummyData.cs" />
