Update naming to fit with repository

--- a/StoreStock/StoreStockWeb.Services.csproj
+++ b/StoreStock/StoreStockWeb.Services.csproj
@@ -130,14 +130,14 @@
     <Compile Include="Core\Models\Factory\Factory.cs" />
     <Compile Include="Core\Models\Factory\IFactory.cs" />
     <Compile Include="Core\Models\Object\Stock.cs" />
-    <Compile Include="Services\APILogic\Stock\CreateStock.cs" />
+    <Compile Include="Services\APILogic\Stock\CreateOneStock.cs" />
     <Compile Include="Services\APILogic\Stock\DeleteStockByID.cs" />
     <Compile Include="Services\APILogic\Stock\ReadStockByID.cs" />
     <Compile Include="Services\APILogic\Stock\StockAPI.cs" />
-    <Compile Include="Services\APILogic\Stock\UpdateStockAmount.cs" />
-    <Compile Include="Services\APILogic\Store\ReadStore.cs" />
+    <Compile Include="Services\APILogic\Stock\UpdateStockAmountById.cs" />
+    <Compile Include="Services\APILogic\Store\ReadStoreObject.cs" />
     <Compile Include="Services\APILogic\Store\StoreAPI.cs" />
-    <Compile Include="Services\APILogic\Store\UpdateStore.cs" />
+    <Compile Include="Services\APILogic\Store\UpdateStoreName.cs" />
     <Compile Include="Services\Module\StockModule.cs" />
     <Compile Include="Services\Module\StoreModule.cs" />
     <Compile Include="Core\DummyData\GenerateDummyData.cs" />
